10/24 (Martin):
Updated EnemyDrone and EnemySoldier.
Added Enemy Drone and Enemy Soldier to Enemy Spawner.
Cleared EnemyMine of warnings.

10/22 (Martin):
Created my own scene with just the Room and Player (error free, no health ui, no player getting hit interactions).
Updated Enemy class. 
Updated EnemyTurret to match the Enemy class and set the player variable.
Moved Enemy prefab to deprecated. Replaced with Turret Enemy, which has a collider and can be destroyed.
Moved IEnemyHandler to deprecated. Enemy class will be used instead.
Moved Test Target Prefab to deprecated. Replaced with Generic Enemy.
Moved TestTarget script to deprecated.
Moved all TestTarget spawner files to deprecated. Replaced with EnemySpawners.
EnemySpawner added and generalized to all Enemy children.
Created a Room prefab that had TestTarget spawner buttons. Moved it to deprecated.
Added a prefab Room that has EnemySpawner buttons.

10/16:
oh god oh fuck version control moment
10/11:
Created DamageInfo class for universalizing passed damage information
Created IHealthInterface class for universal healthholders
Created HealthGeneric class for basic health behavior
Bullets now use DamageInfo
onBulletHit now passes the Damageinfo, not the bullet
Weapons now have a field for their user, which will pass said user to any damage/bullets created. Framework for hitnumbers/kill tracking.
Test target now uses all parts of new damage system, please note that functionality is ONLY for armor.

10/9: 
All "mouse" inputs scripts for the player are now in playerAttack.cs
Mouse sensitivity reduced, players can now use the secondary click to toggle "aim" mode which reduces it even further


10/7: Implements mouse camera movement